Fix mobile scroll snap, horizontal swipe conflict, iOS fonts, logo wrap
- Change scroll-snap-type from mandatory to proximity for smoother mobile
- Add touch-action: pan-x on horizontal carousels to prevent snap conflict
- Add font preloads and broaden font-weight range for iOS Safari
- Add whiteSpace: nowrap to logo to prevent line break

--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,15 @@
 @font-face {
   font-family: 'Ezmel';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 100 900;
   src: url('/fonts/ezmel-regular.woff2') format('woff2');
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Ezmel';
-  font-style: normal;
-  font-weight: 300;
-  src: url('/fonts/ezmel-light.woff2') format('woff2');
   font-display: swap;
 }
 
 @font-face {
   font-family: 'DIN Next';
   font-style: normal;
-  font-weight: 300;
+  font-weight: 100 900;
   src: url('/fonts/din-next-light.woff2') format('woff2');
   font-display: swap;
 }
@@ -30,4 +22,6 @@
 
 body {
   background: #0a0a0a;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
